WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
291708
[WebGPU] MTLCompiler crash on certain Macs
https://bugs.webkit.org/show_bug.cgi?id=291708
Summary
[WebGPU] MTLCompiler crash on certain Macs
Mike Wyrzykowski
Reported
2025-04-17 14:01:23 PDT
[WebGPU] MTLCompiler crash on certain Macs
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2025-04-17 14:14:05 PDT
<
rdar://problem/149182752
>
Mike Wyrzykowski
Comment 2
2025-04-17 14:14:31 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/44220
EWS
Comment 3
2025-04-22 07:14:09 PDT
Committed
293954@main
(303ce31e5f65): <
https://commits.webkit.org/293954@main
> Reviewed commits have been landed. Closing PR #44220 and removing active labels.
Mike Wyrzykowski
Comment 4
2025-05-02 10:12:51 PDT
Re-opening for pull request
https://github.com/WebKit/WebKit/pull/44849
EWS
Comment 5
2025-05-02 16:42:29 PDT
Committed
294458@main
(4813e1129189): <
https://commits.webkit.org/294458@main
> Reviewed commits have been landed. Closing PR #44849 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug