[WebGPU] MTLCompiler crash on certain Macs https://bugs.webkit.org/show_bug.cgi?id=291708 rdar://149182752

Reviewed by Tadeu Zagallo.

Workaround MTLCompiler crash with certain switch statements.

* LayoutTests/fast/webgpu/nocrash/fuzz-291708-expected.txt: Added.
* LayoutTests/fast/webgpu/nocrash/fuzz-291708.html: Added.
Add regression test.

* Source/WebGPU/WGSL/Metal/MetalFunctionWriter.cpp:
(WGSL::Metal::FunctionDefinitionWriter::visit):

Canonical link: https://commits.webkit.org/293954@main